Initial implementations for the matcher (Jython support and PDG support)